Several fixes to the pods page
Fixes: https://github.com/openshift/origin/issues/5178
Fixes: https://github.com/openshift/origin/issues/5179
Fixes wrapping between labels, still need to truncate labels when the page is not wide enough: https://github.com/openshift/origin/issues/5181

--- a/assets/app/styles/_core.less
+++ b/assets/app/styles/_core.less
@@ -681,7 +681,12 @@ pre.clipped {
   }
 
   + .k8s-label {
-    margin-left: 5px;
+    margin-left: 2px;
+
+    &:before {
+      content: ' ';
+      white-space: normal;
+    }
   }
 }
 
